--- a/app/src/main/res/layout/activity_inspect_user.xml
+++ b/app/src/main/res/layout/activity_inspect_user.xml
@@ -12,7 +12,7 @@
         android:id="@+id/mainImg"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/img_1" />
 
     <carbon.widget.ImageView
@@ -21,12 +21,44 @@
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="160dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/img_1"
         app:carbon_cornerRadius="40dp"
         app:carbon_elevation="5dp"
         app:carbon_stroke="@color/white"
         app:carbon_strokeWidth="2dp" />
+
+    <carbon.widget.TextView
+        android:id="@+id/follow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Follow"
+        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:padding="10dp"
+        app:carbon_cornerRadius="5dp"
+        android:background="@color/carbon_blue_600"
+        android:fontFamily="@font/main_font"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="20dp"
+        android:visibility="gone"/>
+
+    <carbon.widget.TextView
+        android:id="@+id/unfollow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Unfollow"
+        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:padding="10dp"
+        app:carbon_cornerRadius="5dp"
+        android:background="@color/carbon_blue_600"
+        android:fontFamily="@font/main_font"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="20dp"
+        android:visibility="gone"/>
 
     <carbon.widget.TextView
         android:id="@+id/userName"
@@ -58,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/skill"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/main_font"
         android:text="Kiet Group Of Institutions"
@@ -66,10 +98,35 @@
         android:textSize="15sp" />
 
     <carbon.widget.TextView
-        android:id="@+id/constTxt3"
+        android:id="@+id/followersCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/organisation"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="0 Followers"
+        android:textColor="@color/carbon_blue_600"
+        android:textSize="16sp"
+        android:fontFamily="@font/main_font"/>
+
+    <carbon.widget.TextView
+        android:id="@+id/followingCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/organisation"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@id/followersCount"
+        android:text="0 Following"
+        android:textColor="@color/carbon_blue_600"
+        android:textSize="16sp"
+        android:fontFamily="@font/main_font"/>
+
+    <carbon.widget.TextView
+        android:id="@+id/constTxt3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/followersCount"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/main_font"
@@ -88,7 +145,6 @@
         android:text="XML,JAVA,ANDROID STUDIO,KOTLIN..."
         android:textColor="@color/carbon_grey_600"
         android:textSize="15sp" />
-
 
     <carbon.widget.TextView
         android:id="@+id/constTxt"
@@ -120,7 +176,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_below="@id/constTxt"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/github"
         android:scaleType="fitXY"
@@ -128,7 +184,6 @@
         app:carbon_cornerRadius="25dp"
         app:carbon_stroke="@color/carbon_orange_800"
         app:carbon_strokeWidth="2dp" />
-
 
     <carbon.widget.TextView
         android:id="@+id/constTxt2"
@@ -160,7 +215,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_below="@id/constTxt2"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/gmail"
         android:scaleType="fitXY"
@@ -168,50 +223,5 @@
         app:carbon_cornerRadius="25dp"
         app:carbon_stroke="@color/carbon_orange_800"
         app:carbon_strokeWidth="2dp" />
-
-    <carbon.widget.TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Follow"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        app:carbon_cornerRadius="5dp"
-        android:background="@color/carbon_blue_600"
-        android:fontFamily="@font/main_font"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
-        android:visibility="gone"
-        android:layout_below="@id/mainImg"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:id="@+id/follow"/>
-
-    <carbon.widget.TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Unfollow"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:visibility="gone"
-        app:carbon_cornerRadius="5dp"
-        android:background="@color/carbon_blue_600"
-        android:fontFamily="@font/main_font"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="30dp"
-        android:layout_below="@id/mainImg"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:id="@+id/unfollow"/>
-
-
-
 
 </carbon.widget.RelativeLayout>
