--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -91,7 +91,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_gravity="center"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:src="@drawable/profile"
                 app:carbon_cornerRadius="60dp" />
 
